tests/bench/mvcgen/loom/Loom/Test/Strategies/IntroForall.lean
import Loom.Tactic.VCGen

/-!
Tests that `lmvcgen` introduces outer `forall` binders before solving the residual goal.
-/

open Loom Lean Meta Order Std.Internal.Do

set_option new_wp_monad true
set_option mvcgen.warning false

namespace Loom.Test.Strategies.IntroForall

macro "test" : tactic => `(tactic| lmvcgen (names := [s‚āĀ, s‚āā]) -trivial)

/--
error: unsolved goals
case vc1
n‚úĚ : Nat
‚äĘ n‚úĚ = n‚úĚ
-/
#guard_msgs in
example : ‚ąÄ n : Nat, n = n := by
  test

/--
error: unsolved goals
case vc1
P‚úĚ : Nat ‚Üí Bool ‚Üí Prop
s‚āĀ‚úĚ : Nat
s‚āā‚úĚ : Bool
a‚úĚ : P‚úĚ s‚āĀ‚úĚ s‚āā‚úĚ
‚äĘ P‚úĚ s‚āĀ‚úĚ s‚āā‚úĚ
-/
#guard_msgs in
example : ‚ąÄ P : Nat ‚Üí Bool ‚Üí Prop, P ‚äĎ P := by
  test

example {l : Type} [CompleteLattice l] :
    ‚ąÄ P : Nat ‚Üí Bool ‚Üí l, P ‚äĎ P := by
  lmvcgen -trivial

end Loom.Test.Strategies.IntroForall
